--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a service side solution to build a push server based on AVOSCloud",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node examples/basic.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/turingou/avoscloud-push/issues"
   },
-  "homepage": "https://github.com/turingou/avoscloud-push"
+  "homepage": "https://github.com/turingou/avoscloud-push",
+  "dependencies": {
+    "avoscloud-sdk": "0.4.2"
+  }
 }
